--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
-        <tittle>The best web designer in KB</tittle>
+        <title>The best web designer in KB</title>
     </head>
-<body>
-        <h1>The best web designer in KB </h1>
-
-</body>
-<html>
-
+        <body>
+            <h1>The best web designer in KB</h1>
+        
+        </body>
+</html>
